[package]
name = "hyli-modules"
description = "Collection of Hyli Modules"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
sdk = { workspace = true, features = ["full-model"] }
client-sdk = { workspace = true, features = ["rest", "indexer"] }
hyli-net = { workspace = true, features = ["bus"] }
hyli-bus = { workspace = true }
hyli-model = { workspace = true, features = ["bus"] }

sha3 = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
assertables = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
paste = { workspace = true }
hex = { workspace = true }
fjall = { workspace = true }

# For DB utils
sqlx = { workspace = true, optional = true, features = ["chrono"] }

# GCS
google-cloud-storage = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true }

axum = { workspace = true, features = ["ws"] }

utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }

tower-http = { workspace = true, features = ["trace", "cors", "catch-panic"] }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

test-log = { workspace = true, features = ["color", "trace"], optional = true }
indexmap = { workspace = true }

# Native verifiers
hyli-crypto = { workspace = true }
hyli-turmoil-shims = { workspace = true, features = ["otlp"] }
secp256k1 = { workspace = true, features = ["rand"] }

[dev-dependencies]
tempfile = { workspace = true }
hyli-model = { workspace = true }
sha2 = { workspace = true }
secp256k1 = { workspace = true, features = ["rand", "global-context"] }
test-log = { workspace = true, features = ["color", "trace"] }
hydentity = { workspace = true, features = ["client"] }
testcontainers-modules = { workspace = true, features = ["postgres"] }
sqlx = { workspace = true, features = ["runtime-tokio", "chrono"] }

[features]
risc0 = ["client-sdk/risc0"]
sp1 = ["client-sdk/sp1"]
turmoil = ["hyli-turmoil-shims/turmoil", "hyli-bus/turmoil"]
test = ["dep:test-log"]
instrumentation = [
  "dep:tracing-opentelemetry",
  "dep:opentelemetry-http",
  "hyli-bus/instrumentation",
]
db = ["dep:sqlx", "hyli-model/sqlx"]
gcs = ["dep:google-cloud-storage", "dep:chrono"]
