[package]
name = "hyli-telemetry"
description = "Shared OpenTelemetry helpers"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }
