[package]
name = "hyli_tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "block_dbg"
path = "src/bin/block_dbg.rs"
required-features = ["ui"]

[[bin]]
name = "smt_auto_prover"
path = "src/bin/smt_auto_prover.rs"
required-features = ["risc0"]

[[bin]]
name = "nuke_tx"
path = "src/bin/nuke_tx.rs"

[[bin]]
name = "health_check"
path = "src/bin/health_check.rs"

[[bin]]
name = "rate_limiter_proxy"
path = "src/bin/rate_limiter_proxy.rs"
required-features = ["rate-proxy"]

[dependencies]
hyle-contract-sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest"] }
hyle-modules = { workspace = true }
hyle-model = { workspace = true }
smt-token = { workspace = true, features = ["client"] }

anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
config = { version = "0.15.9", default-features = false, features = ["toml"] }
serde = "1.0.219"
tracing = "0.1.41"
tokio = "1.45.1"
tracing-subscriber = "0.3.19"
secp256k1 = { version = "0.31.0", features = ["global-context"] }
sha2 = "0.10.8"
hex = "0.4.3"
borsh = "1.5.7"
serde_json = "1.0.140"

# needs to match workspace
opentelemetry = { version = "0.28" }
opentelemetry_sdk = { version = "0.30" }
opentelemetry-prometheus = { version = "0.28" }
prometheus = { version = "0.13.4" }

# Feature UI
ratatui = { version = "0.29.0", features = ["crossterm"], optional = true }
crossterm = { version = "0.29.0", optional = true }

# GCS
google-cloud-storage = "0.24.0"

# Health check
ureq = { version = "3.0.11", default-features = false, features = ["json"] }

# Rate limiting proxy (optional feature)
axum = { version = "0.7", optional = true }
tower_governor = { version = "0.6", optional = true }
tower-http = { version = "0.6.5", features = [
    "trace",
    "cors",
    "catch-panic",
], optional = true }
hyper = { version = "1.0", optional = true }
hyper-util = { version = "0.1", optional = true }
dashmap = { version = "6.1.0", optional = true }
chrono = { version = "0.4.41", features = [
    "clock",
], default-features = false, optional = true }


[features]
risc0 = ["client-sdk/risc0"]
rate-proxy = [
    "dep:axum",
    "dep:tower_governor",
    "dep:tower-http",
    "dep:hyper",
    "dep:hyper-util",
    "dep:dashmap",
    "dep:chrono",
]

default = ["ui", "rate-proxy"]
ui = ["dep:ratatui", "dep:crossterm"]

