[package]
name = "hyli_tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "block_dbg"
path = "src/bin/block_dbg.rs"
required-features = ["ui"]

[[bin]]
name = "smt_auto_prover"
path = "src/bin/smt_auto_prover.rs"
required-features = ["risc0"]

[[bin]]
name = "nuke_tx"
path = "src/bin/nuke_tx.rs"

[[bin]]
name = "health_check"
path = "src/bin/health_check.rs"

[[bin]]
name = "rate_limiter_proxy"
path = "src/bin/rate_limiter_proxy.rs"
required-features = ["rate-proxy"]

[dependencies]
hyle-contract-sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest"] }
hyle-modules = { workspace = true }
hyle-model = { workspace = true }
smt-token = { workspace = true, features = ["client"] }

anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true, features = ["toml"] }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context"] }
sha2 = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }
serde_json = { workspace = true }

# needs to match workspace
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }

# Feature UI
ratatui = { workspace = true, features = ["crossterm"], optional = true }
crossterm = { workspace = true, optional = true }

# GCS
google-cloud-storage = { workspace = true }

# Health check
ureq = { workspace = true, features = ["json"] }

# Rate limiting proxy (optional feature)
axum = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
tower-http = { workspace = true, features = [
    "trace",
    "cors",
    "catch-panic",
], optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
chrono = { workspace = true, features = ["clock"], optional = true }


[features]
risc0 = ["client-sdk/risc0"]
rate-proxy = [
    "dep:axum",
    "dep:tower_governor",
    "dep:tower-http",
    "dep:hyper",
    "dep:hyper-util",
    "dep:dashmap",
    "dep:chrono",
]

default = ["ui", "rate-proxy"]
ui = ["dep:ratatui", "dep:crossterm"]
