[package]
name = "hyli-turmoil-shims"
description = "Deterministic utilities for Hyli tests"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
turmoil = { workspace = true, optional = true }
borsh = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true, features = ["rt-tokio", "experimental_metrics_periodicreader_with_async_runtime"] }
opentelemetry-otlp = { workspace = true, optional = true, features = ["grpc-tonic", "metrics"] }

[features]
turmoil = ["dep:turmoil"]
otlp = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
]

[package.metadata.cargo-machete]
ignored = ["turmoil"]
