[package]
name = "hyli-turmoil-shims"
description = "Deterministic utilities for Hyli tests"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
turmoil = { workspace = true, optional = true }
borsh = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true, features = ["rt-tokio", "experimental_metrics_periodicreader_with_async_runtime"] }

[features]
turmoil = ["dep:turmoil"]
# Lightweight: just the opentelemetry API types (Meter, Counter, etc.)
opentelemetry = ["dep:opentelemetry"]
# Full: adds opentelemetry_sdk for meter provider init and test helpers
otlp = [
  "opentelemetry",
  "dep:opentelemetry_sdk",
]
