[package]
name = "hyli-verifiers"
description = "Hyli verifiers"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hyli-model = { workspace = true, features = ["std"] }

anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

cairo-m-prover = { git = "https://github.com/kkrt-labs/cairo-m", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sonic-rs = { version = "0.5.3", optional = true }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", features = [
  "parallel",
], rev = "ab57a1c", optional = true }


[dev-dependencies]
test-log = { workspace = true, features = ["color", "trace"] }

[features]
default = []
cairo-m = ["dep:cairo-m-prover", "dep:stwo-prover", "dep:sonic-rs", "dep:serde"]
