[package]
name = "hylix"
version = "0.1.0"
edition = "2021"
authors = ["Hyli Team"]
description = "Build, test & deploy verifiable apps on Hyli"
license = "MIT"
repository = "https://github.com/hyli-org/hyli"
homepage = "https://hyli.org"
documentation = "https://docs.hyli.org"
keywords = ["zk", "blockchain", "verifiable", "apps", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hy"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "ansi",
] }
color-eyre = { version = "0.6", features = ["issue-url"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# File system and path handling
dirs = "6.0.0"

# HTTP client for downloading scaffolds
reqwest = { version = "0.12.23", features = ["json", "stream"] }

# Process execution
which = "8.0.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
indicatif = "0.18"
console = "0.16"

# Hyli client SDK for REST API calls
client-sdk = { workspace = true, features = ["rest"] }
