[package]
name = "hylix"
version = "0.9.0"
authors = ["Hyli Team"]
license-file = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Build, test & deploy verifiable apps on Hyli"
documentation = "https://docs.hyli.org"
keywords = ["zk", "blockchain", "verifiable", "apps", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hy"
path = "src/main.rs"

[dependencies]
# Hyli client SDK for REST API calls
client-sdk = { workspace = true, features = ["rest"] }

# CLI and argument parsing
clap = { workspace = true, default-features = true, features = [
  "derive",
  "color",
  "suggestions",
] }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "json",
  "ansi",
] }
color-eyre = { version = "0.6", features = ["issue-url"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# File system and path handling
dirs = "6.0.0"

# HTTP client for downloading scaffolds
reqwest = { version = "0.12.23", features = ["json", "stream"] }

# Process execution
which = "8.0.0"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true, features = ["serde", "parse", "display"] }

# Utilities
anyhow = { workspace = true }
thiserror = "2.0"
indicatif = "0.18"
console = "0.16"
