[package]
name = "hyli-verifier-worker-core"
description = "Lightweight worker runtime for external Hyli verifiers"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
hyli-model = { workspace = true, default-features = false, features = ["std"] }
tokio = { workspace = true, features = ["io-std", "io-util", "net"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
