[package]
name = "hyle-amm"
description = "Hyli Smart Contract"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[[bin]]
name = "amm"
path = "src/main.rs"
required-features = ["risc0"]
test = false

[dependencies]
sdk = { workspace = true }
hyllar = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
anyhow = { workspace = true }
borsh = { workspace = true, features = ["derive"] }

risc0-zkvm = { workspace = true, optional = true, features = ['std'] }
client-sdk = { workspace = true, features = ["risc0"], optional = true }

[features]
default = []
client = ["dep:client-sdk"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]

[package.metadata.docs.rs]
features = ["client"]
