[package]
name = "hyle-hyllar"
description = "Hyli Smart Contract"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[[bin]]
name = "hyllar"
path = "src/main.rs"
required-features = ["risc0"]
test = false

[[example]]
name = "hyllar-runner"
path = "examples/host.rs"


[dependencies]
sdk = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
anyhow = { workspace = true }
sha2 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }

risc0-zkvm = { workspace = true, optional = true, features = ['std'] }
client-sdk = { workspace = true, features = [
  "risc0",
  "rest",
  "indexer",
], optional = true }

[dev-dependencies]
# Active client feature for tests
hyle-hyllar = { path = ".", features = ["client"] }

tokio = { workspace = true, features = ["full", "tracing"] }
risc0-zkvm = { workspace = true, features = ['std', 'prove'] }
mockall = { workspace = true }

[features]
default = []
client = ["dep:client-sdk"]
risc0 = ["dep:risc0-zkvm", "sdk/risc0"]

[package.metadata.docs.rs]
features = ["client"]
